Update: Branding refresh and mobile troubleshooting. - Updated theme to test a more cohesive look. - Investigated and addressed mobile zoom issues for better usability. - Adjusted input font size to be 16px to prevent unintended zooming on mobile devices

--- a/Styles/contact.css
+++ b/Styles/contact.css
@@ -62,10 +62,11 @@ textarea {
   background: var(--neutral-600);
   color: var(--darkThemeText);
   border: none;
-  border: 1px solid var(--peach-light);
+  border: 0.5px solid var(--peach-light);
   border-radius: 0.2rem;
   outline: none;
   padding-left: var(--sm-space);
+  font-size: 16px;
 }
 
 input:focus,
